--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="../public/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pia</title>
-    <script type="module" crossorigin src="/miscelaneas/assets/main-5ff165d4.js"></script>
+    <title>Actividad</title>
+    <script type="module" crossorigin src="/miscelaneas/assets/main-d3a1dafb.js"></script>
     <link rel="modulepreload" crossorigin href="/miscelaneas/assets/ShowResult-1ebc581f.js">
     <link rel="stylesheet" href="/miscelaneas/assets/ShowResult-d0964974.css">
   </head>
