fix: :bug: Fixed script relation with indexes for Casita's exercises

--- a/src/casitacompleja/index.html
+++ b/src/casitacompleja/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="casita"></div>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 
 </html>
