--- a/src/casitadigital/index.html
+++ b/src/casitadigital/index.html
@@ -22,7 +22,7 @@
         </main>
 
     </article>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 
 </html>
