--- a/demoCasitaPalabras01/index.html
+++ b/demoCasitaPalabras01/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>demoCasitaPalabras01</title>
-  <script type="module" crossorigin src="/miscelaneas/assets/casitacompleja-262659d1.js"></script>
+    <title>Casita compleja</title>
+  <script type="module" crossorigin src="/miscelaneas/assets/demoCasitaPalabras01-262659d1.js"></script>
   <link rel="modulepreload" crossorigin href="/miscelaneas/assets/modulepreload-polyfill-ec808ebb.js">
   <link rel="modulepreload" crossorigin href="/miscelaneas/assets/casita-compleja-0a63a704.js">
 </head>
