feat: Update CasitaDigital message element and available characters

--- a/src/casitadigital/index.html
+++ b/src/casitadigital/index.html
@@ -16,7 +16,7 @@
                 <table id="casa"></table>
             </div>
             <div class="cuadro-resultado">
-                <p id="mensaje">>> </p>
+                <p id="mensaje"></p>
             </div>
         </main>
 
