feat: new design

--- a/src/casita_digital_06/index.html
+++ b/src/casita_digital_06/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="casita">
-        <div class="preview-caja">
+        <div class="preview-caja" id="previewCaja">
             <span id="preview"></span>
         </div>
         
